sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:2: error: Missing closing brace `}' assumed here
def cocktailSort() {var x=true;while(x==true)
^AlgCocktailSort1:2: error: expected class or object definition
def cocktailSort() {var x=true;while(x==true)
^